tests/instantiating/stream_conflict_param_return/stderr.golden
error: cannot instantiate 'r' functionality: all stream inner functionalities must be of the same base type and must be param or return, 'r' base type is 'return'
bus.fbd +4:3
   |
 4 |   my_stream stream
   |   ^^^^^^^^^
